# daemontools

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
src/: CMakeLists.txt  error.c  error.h
